--- a/inmate_active_root.ipynb
+++ b/inmate_active_root.ipynb
@@ -20,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "file = r'C:\\Users\\johnson\\Desktop\\MISC\\fldoc\\obis\\INMATE_ACTIVE_ROOT.csv'\n",
+    "file = r'...\\INMATE_ACTIVE_ROOT.csv'\n",
     "root_df = pd.read_csv(file, sep=',', error_bad_lines=False, index_col=False, dtype='unicode')"
    ]
   },
