--- a/inmate_active_root.ipynb
+++ b/inmate_active_root.ipynb
@@ -569,7 +569,7 @@
     }
    ],
    "source": [
-    "#Let's try to limit the number of facilities shown\n",
+    "#Let's try to clean this up and limit the number of facilities shown\n",
     "sns.countplot(y=\"FACILITY_description\", data=root_df, color=\"c\", order=root_df.FACILITY_description.value_counts().iloc[:30].index)"
    ]
   },
